<resources>
    <string name="app_name">Syski</string>
    <string name="btnLogin_txt">Login</string>
    <string name="title_activity_sys_list_menu">System List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_qr">QR Scanner</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_general_storage_value_list">
        <item>B</item>
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings for API Settings Activity -->
    <string name="pref_title_api">API</string>
    <string name="pref_title_api_url">API URL</string>
    <string name="pref_title_api_port">API Port</string>
    <string name="pref_title_api_path">API Path</string>

    <!-- Strings for Developer Settings Activity -->
    <string name="pref_title_developer">Developer</string>
    <string name="pref_title_developer_mode">Developer Mode</string>
    <string name="sys_overview_lbl">System Overview</string>
    <string name="menu_logout">Logout</string>
    <string name="preference_sysID_key">uk.co.syski.client.android.SYSID</string>
    <string name="preference_usrID_key">uk.co.syski.client.android.USRID</string>
    <string name="qr_txt">No QR Code Scanned</string>
    <string name="qr_button">Scan</string>
    <string name="qr_activity">QR Scanner</string>
    <string name="txtModel">Model</string>
    <string name="txtManufacturer">Manufacturer</string>
    <string name="txtMemType">Memory Type</string>
    <string name="sys_cpu_lbl">CPU</string>
    <string name="sys_ram_lbl">RAM</string>
    <string name="sys_stg_lbl">Storage</string>
    <string name="txtArch">Architecture</string>
    <string name="txtClock">Clock Speed</string>
    <string name="txtCore">Core Count</string>
    <string name="txtThread">Thread Count</string>
    <string name="txtSize">Size</string>
    <string name="pref_api_connection_heading">API Connection</string>
    <string name="pref_api_refresh_heading">Refresh</string>
    <string name="pref_api_refreshinterval_title">Refresh Inverval</string>
    <string name="pref_api_refreshinterval_desc">The amount of time between each request of system data from the API.</string>
    <string name="action_syslist">System List</string>
    <string name="txtVersion">Version</string>
    <string name="sys_gpu_lbl">GPU</string>
    <string name="sys_mobo_lbl">Motherboard</string>
    <string name="sys_os_lbl">Operating System</string>
    <string name="txtName">Name</string>
    <string name="button_shutdown">Shutdown</string>
    <string name="button_restart">Restart</string>
    <string name="pref_general_storage_value_title">Storage Value Displayed</string>
    <string name="pref_general_ram_value_title">RAM Value Displayed</string>
    <string name="pref_general_value_choice_heading">Unit Choices</string>
    <string name="nfc_lbl">NFC Scanner</string>
    <string name="channel_name">syskinotif</string>
    <string name="channel_description">Syski Notification Channel</string>
    <string name="channel_id">syskinotif</string>
    <string name="default_notification_channel_id">1</string>
    <string name="fcm_message">FirebaseMessage</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="txt_details_for">View Details For</string>
</resources>
