<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <!-- These are the default settings menus. If you want them to be displayed again, uncomment these three headers.
    <header
        android:fragmeuk.co.syski.client.android.view.SettingsActivityvity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragmeuk.co.syski.client.android.view.SettingsActivityvity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragmeuk.co.syski.client.android.view.SettingsActivityvity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
    -->
    <header
        android:fragment="uk.co.syski.client.android.view.activity.SettingsActivity$GenPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="uk.co.syski.client.android.view.activity.SettingsActivity$APIPreferenceFragment"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/pref_title_api" />

    <header
        android:fragment="uk.co.syski.client.android.view.activity.SettingsActivity$DeveloperPreferenceFragment"
        android:icon="@drawable/ic_usb_black_24dp"
        android:title="@string/pref_title_developer" />

</preference-headers>
